fix: increase spacing between sections on tablet in CTA 18; align mobile description-button spacing with vertical content; center text on mobile when alignment is set to center

--- a/editor-components/call_to_action/call_to_action18/call_to_action18.module.scss
+++ b/editor-components/call_to_action/call_to_action18/call_to_action18.module.scss
@@ -16,12 +16,13 @@
         margin-left: 0;
       }
 
-      .title, .description {
+      .title,
+      .description {
         text-align: left;
       }
     }
 
-    
+
     &.card-background-enabled {
       background-color: var(--composer-font-color-primary);
       padding: 80px var(--composer-gap-xl);
@@ -38,7 +39,8 @@
           }
         }
 
-        .title, .description {
+        .title,
+        .description {
           color: var(--composer-html-background);
         }
       }
@@ -47,9 +49,9 @@
     .buttons {
       display: flex;
       gap: var(--composer-gap-sm);
-      flex-shrink: 0;
       flex-wrap: wrap;
       align-items: center;
+      justify-content: flex-end;
 
       .button {
         .button-text {
@@ -65,11 +67,7 @@
     .max-content {
       flex-direction: row;
       align-items: center;
-      gap: var(--composer-gap-sm);
-
-      &.card-background-enabled {
-        padding: 80px var(--composer-gap-lg);
-      }
+      gap: var(--composer-gap-md);
     }
   }
 }
@@ -78,7 +76,20 @@
   .container {
     .max-content {
       flex-direction: column;
-      align-items: flex-start;
+
+      .header {
+        align-items: center;
+
+        .subtitle,
+        .title,
+        .description {
+          text-align: center;
+        }
+      }
+
+      .buttons {
+        justify-content: center;
+      }
 
       &.card-background-enabled {
         padding: var(--composer-gap-xl) var(--composer-gap-md);
